plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '7.0.0'
}

group 'space.cubicworld'
version '1.0'

allprojects {

    apply plugin: 'java'
    apply plugin: 'com.github.johnrengelman.shadow'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        compileOnly 'net.kyori:adventure-api:4.11.0'
        compileOnly 'org.projectlombok:lombok:1.18.24'
        annotationProcessor 'org.projectlombok:lombok:1.18.24'
    }

}